# ava

./: .gitignore  .gitpod.yml  LICENSE  Procfile  README.md  fly.toml  pyproject.toml
ava/: pdf_download.py  rag_populate_db.py  rag_query.py
ava-ui/: README.md
ava/ava-backend/: rag_query.py
ava/ava_backend/: __init__.py  rag_populate_db.py  rag_query.py
ava/ava_backend/resources/jsons/: blog.sui.io.json  docs.sui.io.json  examples.move.json  examples.sui.io.json  move_book.json  move_language.json  move_patterns.json  move_tutorial.json  starcoin_move.json  sui.json  sui_move_intro_course.json
ava/ava_backend/utils/: merge_jsons.py  pdf_download.py
ava/ava_ui/: main.py
ava/ava_ui/pages/: __init__.py  chat_page.py
